1. Added StreamSpeakerDto, AddStreamSpeakerDto, UpdateStreamSpeakerDto for performing stream speaker related actions. 2. Removed @ToString on classes unless it is applicable. 3. Replaced emptyList() with List.of() in mapper classes. 4. Allow User access to Country API in CountryController. 5. Replaced enum for CountryMapper using class. 6. Added response classes for Stream Speaker actions including GetStreamSpeakersResponse, StreamSpeakerResponse, AddStreamSpeakerResponse and UpdateStreamSpeakerResponse. 7. Added StreamSpeakerMapper for mapping StreamSpeaker domain entity to StreamSpeakerResponse. 8. Added MemberExist annotation and MemberExistValidator for checking if a user exists by ID. 9. Add repository method MemberRepository.existsByMemberId() for use in MemberExistValidator. 10. General refactoring of code. 11. Added methods in StreamSpeakerService for interacting with StreamSpeakerRepository. 12. Updated ValidationMessages.properties and Message Source files. 13. Added documentation. 14. Check and validate Stream Speakers Member IDs are ID for valid members.